[tool.poetry]
name = "orbstackmachines"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nick.moreton@torchbox.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fabric = "^3.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
